= master

* Support an options hash when loading the cookies plugin, that will be used as the defaults for setting and deleting cookies (mwpastore, jeremyevans) (#112)

* Make the static_routing plugin work with the hooks plugin if the hooks plugin is loaded first (jeremyevans) (#110)

* Do not modify the render plugin's cache if loading the plugin multiple times (jeremyevans)

= 2.23.0 (2017-02-24)

* Add :inherit_cache render plugin option, to create a copy of the cache for subclasses, instead of using an empty cache (jeremyevans)

* In development mode, default to :explicit_cache=>true, :cache=>true instead of :cache=>false (jeremyevans)

* Add :explicit_cache render plugin option, to only cache templates if the :cache option is given to render/view (jeremyevans)

* Add error_email_content method to error_email plugin (jeremyevans)

* Make error_email method in error_email plugin support non-exception arguments (jeremyevans)

* Make Roda.freeze in the static_routing plugin return self (jeremyevans)

= 2.22.0 (2017-01-20)

* Add support for :verbatim_string_matcher option, for making all string matchers match verbatim (jeremyevans)

* Add support for :unsupported_matcher => :raise option, for raising on unsupported matcher values (jeremyevans)

* Add support for :unsupported_block_result => :raise option, for raising on unsupported route/match block return values (jeremyevans)

= 2.21.0 (2016-12-16)

* Add handle_stream_error method to streaming plugin, for handling errors when using stream(:loop=>true) (jeremyevans)

= 2.20.0 (2016-11-13)

* Support :escape=>:erubi option in the render plugin to use the erubi template engine (jeremyevans)

= 2.19.0 (2016-10-14)

* Don't add Content-Type/Content-Length headers for 1xx, 204, 205, 304 statuses (celsworth, jeremyevans) (#101, #102)

* Optimize indifferent_params plugin when using Rack 2 (jeremyevans)

* Fix assets_paths method in assets plugin when subresource integrity is used (jeremyevans, celsworth)
