@@ -1,5 +1,7 @@
 = master
 
+* Allow middleware plugin to accept a block that will be used to configure the application when used as middleware (jeremyevans)
+
 * Support an options hash when loading the cookies plugin, that will be used as the defaults for setting and deleting cookies (mwpastore, jeremyevans) (#112)
 
 * Make the static_routing plugin work with the hooks plugin if the hooks plugin is loaded first (jeremyevans) (#110)
